# yappr

./: README.md  pyproject.toml
yappr/: __init__.py  decorator.py  logger.py  updater.py
