[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yappr"
version = "1.0.0"
dependencies = []
requires-python = ">=3"
authors = [
  { name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" },
]
description = "Yet another python package updater"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/yappr"
Issues = "https://github.com/sandbox-pokhara/yappr/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"yappr" = "yappr"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
